# Asim

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  Common.cc  Common.h  Core.cc  Core.h  FormulaLogger.cc  FormulaLogger.h  SimulationConfig.h  Simulator.cc  SystolicWS.cc  SystolicWS.h  TraceLogger.cc  TraceLogger.h  main.cc
src/inverse/block_richardson/: BlockRichardsonBaselineModel.cc  BlockRichardsonBaselineModel.h  BlockRichardsonBaselineOp.cc  BlockRichardsonBaselineOp.h  BlockRichardsonModel.cc  VERSION.md
src/inverse/cholesky_block/: CholeskyBlockBaselineModel.cc  CholeskyBlockBaselineModel.h  CholeskyBlockBaselineOp.cc  CholeskyBlockBaselineOp.h  CholeskyInvChainOp.cc  CholeskyInvOp.cc  CholeskyInvOp.h  CholeskyModel.cc  CholeskyModel.h  VERSION.md
src/inverse/cholesky_noblock/: CholeskyInvNoBlockOp.h  CholeskyNoBlockBaselineModel.cc  CholeskyNoBlockBaselineModel.h  CholeskyNoBlockBaselineOp.cc  CholeskyNoBlockBaselineOp.h  CholeskyNoBlockMergeModel.cc  CholeskyNoBlockMergeModel.h  CholeskyNoBlockMergeOp.cc  CholeskyNoBlockMergeOp.h  VERSION.md
src/inverse/ldl_block/: LDLBlockBaselineModel.cc  LDLBlockBaselineModel.h  LDLBlockBaselineOp.cc  LDLBlockBaselineOp.h  LDLDecompOp.h  (+2 more)
src/models/: BlockJacobiModel.h  ChannelModel.h  DeepUnfoldModel.cc  DeepUnfoldNPUOptModel.cc  DeepUnfoldNPUOptModel.h  MatmulModel.cc  MatmulModel.h  SeriesInverseModel.cc
src/operations/: DeepUnfoldNPUOp.h  DeepUnfoldNPUOptOp.cc  DeepUnfoldNPUOptOp.h  Gemm.cc  MMSEBaselineOp.cc  MyNewOperator.h  Operation.cc  OperationFactory.cc  SeriesInverseOp.cc
(+338 files in other folders)
